yml-definitions/ingress/hostbased/datagerry-kubernetes_01.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datagerry-demo-01
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "dg01.dev.michael-batz.de"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: datagerry-demo-01
            port:
              number: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: datagerry-demo-01
  labels:
    app: datagerry-demo-01
spec:
  type: ClusterIP
  selector:
    app: datagerry-demo-01
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: datagerry-demo-01
spec:
  selector:
    matchLabels:
      app: datagerry-demo-01
  serviceName: "datagerry-demo-01"
  replicas: 1
  template:
    metadata:
      labels:
        app: datagerry-demo-01
    spec:
      containers:
      - name: datagerry
        image: nethinks/datagerry:latest
      - name: db
        image: mongo:4.2-bionic
        volumeMounts:
        - name: datagerry-demo-01
          mountPath: /data/db
        - name: datagerry-demo-01
          mountPath: /data/configdb
      - name: broker
        image: rabbitmq:3.8
        volumeMounts:
        - name: datagerry-demo-01
          mountPath: /var/lib/rabbitmq
  volumeClaimTemplates:
  - metadata:
      name: datagerry-demo-01
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
      storageClassName: do-block-storage
